--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+      - beta
+      - next
+      - "*.x" #Maintenance Release Branches
 jobs:
   release:
     name: Release
