--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -13,5 +13,8 @@ plugins:
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
-    "@semantic-release/github",
+    [
+      "@semantic-release/github",
+      { assets: [{ path: "CHANGELOG.md", label: "CHANGELOGs" }] },
+    ],
   ]
