feat(release): execute release dry run on pull requests

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,12 @@ on:
       - beta
       - next
       - "*.x" #Maintenance Release Branches
+  pull_request:
+    branches:
+      - main
+      - beta
+      - next
+      - "*.x" #Maintenance Release Branches
 jobs:
   release:
     name: Release
@@ -19,7 +25,13 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "10.19"
+      - name: Release Dry Run
+        if: github.event_name == 'pull_request'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npx semantic-release --dry-run
       - name: Release
+        if: github.event_name != 'pull_request'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release
