--- a/.commitlintrc.yaml
+++ b/.commitlintrc.yaml
@@ -1,2 +1,19 @@
+# plugins:
+#   - "commitlint-plugin-jira-rules"
+
 extends:
   - "@commitlint/config-conventional"
+  #- "jira"
+
+help: |
+  **Possible types**:
+  `ci`:       Changes to our CI configuration files and scripts (example scopes: Travis, Circle CI, BrowserStack, GitHub)
+  `feat`:     Adds a new feature.
+  `fix`:      Solves a bug.
+  `docs`:     Adds or alters documentation. (example scopes: readme, worker, code_of_conduct, contributors)
+  `style`:    Improves formatting, white-space.
+  `refactor`: Rewrites code without feature, performance or bug changes.
+  `perf`:     Improves performance.
+  `test`:     Adds or modifies tests. (example scopes: functionals, unit-tests)
+  `revert`:   Changes that reverting other changes
+  `chore`:    No production code change. Updating grunt tasks etc;
