--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,13 @@ repos:
     hooks:
       - id: commitlint
         stages: [commit-msg]
-        additional_dependencies: ["@commitlint/config-conventional"]
+        additional_dependencies:
+          [
+            "@commitlint/config-conventional",
+            "@commitlint/cli",
+            "commitlint-plugin-jira-rules",
+            "commitlint-config-jira",
+          ]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
