ci: only run dry-run if changes are made to the release config

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,8 @@ on:
       - beta
       - next
       - "*.x" #Maintenance Release Branches
+    paths:
+      - ".releaserc.yaml"
 jobs:
   release:
     name: Release
